<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:background="#031B3B"

    tools:context=".SignUp">

    <ImageView

        android:id="@+id/robot"

        android:layout_width="184dp"

        android:layout_height="178dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.497"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.33"
        app:srcCompat="@drawable/bot" />

    <ImageView

        android:id="@+id/homelogo"

        android:layout_width="646dp"

        android:layout_height="221dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.417"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.0"

        app:srcCompat="@drawable/signup" />

    <EditText

        android:id="@+id/LoginUsername"

        android:layout_width="325dp"

        android:layout_height="50dp"

        android:background="@drawable/input_bg"

        android:drawableLeft="@drawable/usericon"

        android:drawablePadding="8dp"

        android:ems="10"

        android:fontFamily="@font/urbanist"

        android:hint="@string/username_hint"

        android:inputType="text"

        android:padding="8dp"

        android:textColor="@color/black"

        android:textColorHint="#1C1C1C"

        android:textSize="13dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.534"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.525" />

    <EditText

        android:id="@+id/LoginPassword"

        android:layout_width="325dp"

        android:layout_height="50dp"

        android:background="@drawable/input_bg"

        android:drawableLeft="@drawable/passwordicon"

        android:drawablePadding="8dp"

        android:ems="10"

        android:fontFamily="@font/urbanist"

        android:hint="@string/password_hint"

        android:inputType="textPassword"

        android:padding="8dp"

        android:textColor="@color/black"

        android:textColorHint="#1C1C1C"

        android:textSize="13dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.534"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.609" />

    <EditText

        android:id="@+id/ConfirmPassword"

        android:layout_width="325dp"

        android:layout_height="50dp"

        android:background="@drawable/input_bg"

        android:drawableLeft="@drawable/confirmtick"

        android:drawablePadding="8dp"

        android:ems="10"

        android:fontFamily="@font/urbanist"

        android:hint="@string/confirm_password_hint"

        android:inputType="textPassword"

        android:padding="8dp"

        android:textColor="@color/black"

        android:textColorHint="#1C1C1C"

        android:textSize="13dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.534"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.692" />

    <Button

        android:id="@+id/btnLogin"

        android:layout_width="167dp"

        android:layout_height="62dp"

        android:backgroundTint="@color/ButtonYellow"

        android:padding="16dp"

        android:text="@string/next_button"

        android:textColorHint="#FFFFFF"

        android:textSize="12dp"

        app:cornerRadius="8dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.828"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton"
        android:layout_width="131dp"
        android:layout_height="62dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />

    <TextView

        android:id="@+id/slogan"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:fontFamily="@font/poor_story"

        android:text="@string/slogan_text"

        android:textColor="@color/white"

        android:textSize="24dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.239" />

    <TextView

        android:id="@+id/Redirect2Login"

        android:layout_width="161dp"

        android:layout_height="42dp"

        android:text="@string/redirect_to_login"

        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.884" />
</androidx.constraintlayout.widget.ConstraintLayout>
